# BhPlayer

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/palyer/wz1/bhplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFPlay.c  FFmpegDecodeAudio.c  PTreadTest.c  com_palyer_wz1_bhplayer_VideoPlayer.h  ffmpegRender.c  native-lib.cpp  queue.c  queue.h
app/src/main/java/com/palyer/wz1/bhplayer/: AudioUtil.java  MainActivity.java  VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/palyer/wz1/bhplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
